# SampleOrderSystem-kimbyungnam-20019709

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  PRD.md  README.md  pyproject.toml
.claude/agents/: doc-impl-consistency-reviewer.md
docs/poc/: 2026-07-15-cli-design-revision-proposal.md  2026-07-15-persistence-poc-findings.md
semi/cli/: app.py  controllers.py  menu_loop.py  views.py
semi/domain/: models.py
semi/scheduler/: background_worker.py
semi/services/: monitoring_service.py  order_service.py  production_math.py  production_service.py  sample_service.py  transactional.py
semi/storage/: _datetime.py  db.py  exceptions.py  order_repository.py  production_job_repository.py  sample_repository.py
tests/: conftest.py  test_domain_models.py  test_fakes.py  test_lifecycle.py  test_monitoring_service.py  test_order_service.py  test_production_math.py  test_production_service.py  test_sample_service.py  test_transactional.py
tests/acceptance/: conftest.py  test_concurrency_scheduler.py  test_main_loop.py  test_monitoring_menu.py  test_order_menu.py  test_production_menu.py  test_release_menu.py  test_sample_menu.py  test_views_fail_safe.py
tests/cli/: test_app.py  test_menu_loop.py  test_monitoring_menu_controller.py  test_order_menu_controller.py  test_production_menu_controller.py  test_release_menu_controller.py  test_sample_menu_controller.py  test_views_monitoring_production_release.py  test_views_order.py  test_views_sample.py
tests/domain/: test_models.py
tests/integration/: conftest.py  test_order_lifecycle_sqlite.py
tests/scheduler/: test_background_worker.py
tests/storage/: conftest.py  test_db.py  test_order_repository.py  test_production_job_repository.py  test_sample_repository.py
(+17 files in other folders)
